--- a/kanban-frondend/src/styles.scss
+++ b/kanban-frondend/src/styles.scss
@@ -235,10 +235,28 @@ html {
 
 /* Chrome spezifische Stile */
 .chrome {
-    scrollbar-color: $accent transparent;
 
-    * {
-        scrollbar-width: thin;
+    /* width */
+    ::-webkit-scrollbar {
+        width: 10px;
+        height: 10px;
+    }
+
+    /* Track */
+    ::-webkit-scrollbar-track {
+        box-shadow: inset 0 0 50px $link;
+        border-radius: 10px;
+    }
+
+    /* Handle */
+    ::-webkit-scrollbar-thumb {
+        background: $accent;
+        border-radius: 10px;
+    }
+
+    /* Handle on hover */
+    ::-webkit-scrollbar-thumb:hover {
+        background: rgba($color: $accent, $alpha: 0.7);
     }
 }
 
